# os-agent-observability-evals

./: .gitignore  README.md  blog.md
acme-shared/: pyproject.toml
acme-shared/acme_shared/: __init__.py  criteria.py  dataset.py  langgraph_agent.py  observability.py  tools.py  tracking.py
acme-support-agent/: .env.example  .gitignore  README.md  docker-compose.yml
acme-support-agent-agentcore/: README.md  agent.py  pyproject.toml  requirements.txt
acme-support-agent-agentcore/evals/: run_evals.py
acme-support-agent-py-langgraph/: README.md  pyproject.toml  run.py
acme-support-agent-py-langgraph-deepeval/: README.md  eval_outputs.json  pyproject.toml  run.py
acme-support-agent-py-langgraph-deepeval/evals/: run_evals.py
acme-support-agent-py-langgraph-ragas/: README.md  pyproject.toml  run.py
acme-support-agent-py-langgraph-ragas/evals/: run_evals.py
acme-support-agent-py-langgraph/evals/: run_evals.py
acme-support-agent-py-strands/: README.md  pyproject.toml  run.py  strands_agent.py
acme-support-agent-py-strands/evals/: run_evals.py
acme-support-agent/docs/: README.md  production.md
acme-support-agent/infra/data-prepper/: pipelines.yaml
acme-support-agent/infra/otel-collector/: otel-collector-config.yaml
acme-support-agent/infra/prometheus/: prometheus.yml  rules.yml
acme-support-agent/python/: pyproject.toml
acme-support-agent/python/acme/: __init__.py  agent.py  run.py  tools.py
acme-support-agent/python/acme/frameworks/: __init__.py  anthropic_agent.py  bedrock_agent.py  langchain_agent.py  llamaindex_agent.py  openai_agent.py
acme-support-agent/python/evals/: __init__.py  run_evals.py
acme-support-agent/typescript/: package.json
acme-support-agent/typescript/src/: agent.ts  observability.ts  run.ts  tools.ts
acme-support-agent/verify/: check-instrumentation.sh  check-stack.sh  queries.md
