[project]
name = "acme-support-agent-py-langgraph"
version = "0.1.0"
description = "Acme Support Agent on LangGraph, instrumented with the OpenSearch GenAI SDK; native-SDK evals."
requires-python = ">=3.10"
dependencies = [
    "acme-shared",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "openai>=1.40",
    "opensearch-genai-observability-sdk-py[langchain]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["evals"]

# Install the shared core from the sibling folder:
#   pip install -e ../acme-shared && pip install -e .
[tool.uv.sources]
acme-shared = { path = "../acme-shared", editable = true }
