[project]
name = "acme-support-agent-py-strands"
version = "0.1.0"
description = "Acme Support Agent on the Strands Agents SDK, instrumented with the OpenSearch GenAI SDK."
requires-python = ">=3.10"
dependencies = [
    "acme-shared",
    "strands-agents>=0.1",
    "strands-agents-tools>=0.1",
    "opensearch-genai-observability-sdk-py[bedrock]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["evals"]

[tool.uv.sources]
acme-shared = { path = "../acme-shared", editable = true }
